# inari

./: .env.local  README.md  docker-compose.yml
.github/workflows/: python-pr.yml
src/: Makefile  conftest.py  manage.py  pyproject.toml  setup.cfg
src/apps/common/tests/: test_view.py
src/apps/game/: __init__.py  factories.py  managers.py  models.py  permissions.py  serializers.py  settings.py  urls.py  utils.py  views.py
src/apps/game/migrations/: 0001_initial.py  0002_game_guesses_left_game_max_guesses_guess_and_more.py
src/apps/game/tests/: test_managers.py  test_models.py  test_permissions.py  test_serializers.py  test_utils.py  test_views.py
src/inari/: urls.py  wsgi.py
src/inari/settings/: base.py  local.py  test.py
